# star_backend

./: .gitignore  LICENSE  pyproject.toml
data/processed/: forecast_results.json
data/raw/: ST_CLINICAL.xlsx  ST_WEATHER.xlsx
src/star_backend/: __init__.py  __main__.py  api.py  cli.py  config.py  data.py  exceptions.py  features.py  logging_conf.py  pipeline.py
src/star_backend/schemas/: observations.py
